[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "cmd/main.rs"

[lib]
name = "client_lib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "^1.14.0", features = ["macros", "rt", "sync", "net", "time", "rt-multi-thread"] }
prost = "0.9"
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"
