[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.14.0", features = ["macros", "rt", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1.8", features = [ "sync" ] }
futures = { version = "0.3.19", features = ["default"] }

[dev-dependencies]
tokio = { version = "^1.14.0", features = ["macros", "rt", "sync", "time", "rt-multi-thread"] }
