[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.14.0", features = ["macros", "rt", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1.8", features = [ "sync" ] }
futures = { version = "0.3.19", features = ["default"] }
uuid = { version = "0.8", features = ["v4"] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
petgraph = { version = "0.6", default-features = false }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "^1.14.0", features = ["macros", "rt", "sync", "time", "rt-multi-thread"] }
test-log = "0.2.8"
env_logger = "0.9.0"
