[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "cmd/main.rs"

[lib]
name = "server_lib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "^1.14.0", features = ["macros", "rt", "sync", "net", "time"] }
libc = "0.2"
mio = { version = "^0.7", features = ["os-ext"] }
prost = "0.9"
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
lfs-core = { version = "0.6" }
sys-mount = { version = "1.3", default-features = false }
udev = { git = "https://github.com/d0u9/udev-rs", branch = "pi_control_x" }
